JPA and MyBatis implementation

--- a/FoodApp/src/main/webapp/myBatis/index.xhtml
+++ b/FoodApp/src/main/webapp/myBatis/index.xhtml
@@ -7,7 +7,7 @@
 >
 <h:head/>
 <h:body>
-    <h2>Food shop app:</h2>
+    <h2>Food shop app (MyBatis):</h2>
     <div>
         <h:link outcome="customers" value="Shop customer list" />
     </div>
@@ -15,6 +15,6 @@
         <h:link outcome="items" value="Shop item list" />
     </div>
     <br/>
-    <h:link outcome="myBatis/index" value="MyBatis implementation"/>
+    <h:link outcome="/index" value="JPA implementation"/>
 </h:body>
 </html>
